--- a/react-frontend/src/components/MemeGenerator/MemeGenerator.css
+++ b/react-frontend/src/components/MemeGenerator/MemeGenerator.css
@@ -13,3 +13,44 @@
   padding: 20px;
   border-radius: 10px;
 }
+
+.text-input-container{
+  text-align: left;
+  margin: 20px;
+}
+
+.text-input-container label {
+  display: block;
+  margin-bottom: 10px;
+  font-weight: bold;
+  font-size: 18px;
+  color: #333;
+}
+
+.text-input-container input {
+  padding: 10px;
+  font-size: 16px;
+  border: none;
+  border-radius: 5px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+  background-color: #f8f8f8;
+  color: #333;
+  transition: all 0.3s ease;
+}
+
+.text-input-container input:focus {
+  outline: none;
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
+  background-color: #fff;
+}
+
+.meme-editing {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+}
+
+.text-input-container .image-canvas-container {
+  flex: 1;
+}
+
